src/firewall/fixtures/golden.v4
*filter
:TP-INPUT - [0:0]
:TP-FWD - [0:0]
-A TP-INPUT -i lo -m comment --comment "tp:system:loopback" -j ACCEPT
-A TP-INPUT -m conntrack --ctstate ESTABLISHED,RELATED -m comment --comment "tp:system:established" -j ACCEPT
-A TP-INPUT -p icmp -m comment --comment "tp:system:icmp" -j ACCEPT
-A TP-INPUT -p udp --sport 67 --dport 68 -m comment --comment "tp:system:dhcp" -j ACCEPT
-A TP-INPUT -p tcp --dport 22 -m comment --comment "tp:system:tcp-22" -j ACCEPT
-A TP-INPUT -p tcp --dport 2222 -m comment --comment "tp:system:tcp-2222" -j ACCEPT
-A TP-INPUT -p tcp --dport 8443 -m comment --comment "tp:system:tcp-8443" -j ACCEPT
-A TP-INPUT -p tcp --dport 5432 -m comment --comment "tp:user:pgadmin no external pg" -j DROP
-A TP-INPUT -s 203.0.113.9/32 -p tcp --dport 9000:9010 -m comment --comment "tp:user:office-only" -j REJECT --reject-with tcp-reset
-A TP-INPUT -p tcp --dport 80 -m comment --comment "tp:derived:cp-http Caddy" -j ACCEPT
-A TP-INPUT -p tcp --dport 443 -m comment --comment "tp:derived:cp-https Caddy" -j ACCEPT
-A TP-INPUT -p udp --dport 51820 -m comment --comment "tp:derived:wg" -j ACCEPT
-A TP-INPUT -s 10.100.0.0/24 -p tcp --dport 33002 -m comment --comment "tp:system:raft" -j ACCEPT
-A TP-FWD -m conntrack --ctstate ESTABLISHED,RELATED -m comment --comment "tp:system:established" -j RETURN
-A TP-FWD -i docker0 -m comment --comment "tp:system:container-egress" -j RETURN
-A TP-FWD -i br-+ -m comment --comment "tp:system:container-egress" -j RETURN
-A TP-FWD -i tp0 -m comment --comment "tp:system:container-egress" -j RETURN
-A TP-FWD -s 192.0.2.0/24 -m comment --comment "tp:user:blocked-src abuser" -j DROP
-A TP-FWD -s 198.51.100.4/32 -p tcp -m conntrack --ctorigdstport 3306 --ctorigdst 192.0.2.10/32 -m comment --comment "tp:user:site-db" -j RETURN
-A TP-FWD -p tcp -m conntrack --ctorigdstport 3306 --ctorigdst 192.0.2.10/32 -m comment --comment "tp:user:site-db" -j DROP
COMMIT
