src/firewall/fixtures/golden.v6
*filter
:TP-INPUT - [0:0]
:TP-FWD - [0:0]
-A TP-INPUT -i lo -m comment --comment "tp:system:loopback" -j ACCEPT
-A TP-INPUT -m conntrack --ctstate ESTABLISHED,RELATED -m comment --comment "tp:system:established" -j ACCEPT
-A TP-INPUT -p ipv6-icmp -m comment --comment "tp:system:icmpv6" -j ACCEPT
-A TP-INPUT -p udp --sport 547 --dport 546 -m comment --comment "tp:system:dhcpv6" -j ACCEPT
-A TP-INPUT -p tcp --dport 22 -m comment --comment "tp:system:tcp-22" -j ACCEPT
-A TP-INPUT -p tcp --dport 2222 -m comment --comment "tp:system:tcp-2222" -j ACCEPT
-A TP-INPUT -p tcp --dport 8443 -m comment --comment "tp:system:tcp-8443" -j ACCEPT
-A TP-INPUT -p tcp --dport 5432 -m comment --comment "tp:user:pgadmin no external pg" -j DROP
-A TP-INPUT -p tcp --dport 80 -m comment --comment "tp:derived:cp-http Caddy" -j ACCEPT
-A TP-INPUT -p tcp --dport 443 -m comment --comment "tp:derived:cp-https Caddy" -j ACCEPT
-A TP-INPUT -p udp --dport 51820 -m comment --comment "tp:derived:wg" -j ACCEPT
-A TP-INPUT -s fd00:100::/64 -p tcp --dport 33002 -m comment --comment "tp:system:raft" -j ACCEPT
-A TP-FWD -m conntrack --ctstate ESTABLISHED,RELATED -m comment --comment "tp:system:established" -j RETURN
-A TP-FWD -i docker0 -m comment --comment "tp:system:container-egress" -j RETURN
-A TP-FWD -i br-+ -m comment --comment "tp:system:container-egress" -j RETURN
-A TP-FWD -i tp0 -m comment --comment "tp:system:container-egress" -j RETURN
COMMIT
